--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ input{
     left: 250px;
     top: 300px;
     z-index: 2;
+    font-size: 300px;
     font-family: "Meie Script", cursive;
     font-weight: 400;
     font-style: normal;
